--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "bin": {
     "node-cli-temple": "./bin/node-cli-temple.js"
   },
+  "scripts": {
+    "lint": "eslint \"bin/**/*.js\" \"src/**/*.js\" \"tests/**/*.js\"",
+    "test": "jest"
+  },
   "dependencies": {
+    "@babel/preset-env": "^7.11.5",
     "@types/jest": "^26.0.10",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
@@ -13,14 +18,17 @@
     "log4js": "^6.3.0",
     "minimatch": "^3.0.4",
     "moment": "^2.29.1",
-    "shelljs": "^0.8.4"
+    "shelljs": "^0.8.4",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.5.2",
+    "babel-preset-env": "^1.7.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint": "^7.10.0",
-    "jest": "^26.4.2"
-  },
-  "scripts": {
-    "test": "jest"
+    "jest": "^26.5.2",
+    "regenerator-runtime": "^0.13.7"
   },
   "engines": {
     "node": ">=8.10.0"
