--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^26.5.2",
     "babel-preset-env": "^1.7.0",
-    "eslint-plugin-jest": "^24.1.0",
     "eslint": "^7.10.0",
+    "eslint-plugin-jest": "^24.1.0",
     "jest": "^26.5.2",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "semver": "^7.3.2"
   },
   "engines": {
     "node": ">=8.10.0"
