--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ node_js:
   - "node"
   - "lts/*"
   - "14"
+os:
+  - linux
+  - osx
+  - windows
 install:
   - make installGlobal
   - make install
