--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,17 @@ before_cache:
     esac
 
 install:
-  - make installGlobal
-  - make install
+- |-
+  case $TRAVIS_OS_NAME in
+    windows)
+      npm install eslint jest codecov --global
+      npm install
+    ;;
+    *)
+      make installGlobal
+      make install
+    ;;
+  esac
 cache:
   directories:
     - "node_modules"
