--- a/.travis.yml
+++ b/.travis.yml
@@ -47,10 +47,12 @@ install:
 - |-
   case $TRAVIS_OS_NAME in
     windows)
+      rd /s /q package-lock.json
       npm install eslint jest codecov --global
       npm install
     ;;
     *)
+      rm -rf package-lock.json
       make installGlobal
       make install
     ;;
