--- a/.travis.yml
+++ b/.travis.yml
@@ -8,40 +8,36 @@ os:
   - osx
   - windows
 # https://github.com/ImperatorS79/PFEM/blob/master/.travis.yml
-before_install:
-  - |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        [[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64
-        choco uninstall -y mingw
-        choco upgrade --no-progress -y msys2
-        export msys2='cmd //C RefreshEnv.cmd '
-        export msys2+='& set MSYS=winsymlinks:nativestrict '
-        export msys2+='& C:\\tools\\msys64\\msys2_shell.cmd -defterm -no-start'
-        export mingw64="$msys2 -mingw64 -full-path -here -c "\"\$@"\" --"
-        export msys2+=" -msys2 -c "\"\$@"\" --"
-        $msys2 pacman --sync --noconfirm --needed mingw-w64-x86_64-toolchain mingw-w64-x86_64-boost mingw-w64-x86_64-mpfr mingw-w64-x86_64-gmp mingw-w64-x86_64-nlohmann-json mingw-w64-x86_64-eigen3 mingw-w64-x86_64-lua mingw-w64-x86_64-swig
-        ## Install more MSYS2 packages from https://packages.msys2.org/base here
-        taskkill //IM gpg-agent.exe //F  # https://travis-ci.community/t/4967
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
-        export MAKE=mingw32-make  # so that Autotools can find it
-        ;;
-    #    *)
-    #    make installGlobal
-    #    make install
-    #    ;;
-    esac
-before_cache:
-  - |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        # https://unix.stackexchange.com/a/137322/107554
-        $msys2 pacman --sync --clean --noconfirm
-        ;;
-      osx)
-        brew cleanup
-        ;;
-    esac
+#before_install:
+#  - |-
+#    case $TRAVIS_OS_NAME in
+#      windows)
+#        [[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64
+#        choco uninstall -y mingw
+#        choco upgrade --no-progress -y msys2
+#        export msys2='cmd //C RefreshEnv.cmd '
+#        export msys2+='& set MSYS=winsymlinks:nativestrict '
+#        export msys2+='& C:\\tools\\msys64\\msys2_shell.cmd -defterm -no-start'
+#        export mingw64="$msys2 -mingw64 -full-path -here -c "\"\$@"\" --"
+#        export msys2+=" -msys2 -c "\"\$@"\" --"
+#        $msys2 pacman --sync --noconfirm --needed mingw-w64-x86_64-toolchain mingw-w64-x86_64-boost mingw-w64-x86_64-mpfr mingw-w64-x86_64-gmp mingw-w64-x86_64-nlohmann-json mingw-w64-x86_64-eigen3 mingw-w64-x86_64-lua mingw-w64-x86_64-swig
+#        ## Install more MSYS2 packages from https://packages.msys2.org/base here
+#        taskkill //IM gpg-agent.exe //F  # https://travis-ci.community/t/4967
+#        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+#        export MAKE=mingw32-make  # so that Autotools can find it
+#        ;;
+#    esac
+#before_cache:
+#  - |-
+#    case $TRAVIS_OS_NAME in
+#      windows)
+#        # https://unix.stackexchange.com/a/137322/107554
+#        $msys2 pacman --sync --clean --noconfirm
+#        ;;
+#      osx)
+#        brew cleanup
+#        ;;
+#    esac
 
 install:
 - |-
