--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "minimatch": "^3.0.4",
     "moment": "^2.29.1",
     "shelljs": "^0.8.4",
+    "string-format": "^2.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
