remove node_modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ install:
     ;;
     *)
       rm -rf package-lock.json
+      rm -rf node_modules
       make installGlobal
       make install
     ;;
