add clean task for maintain

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ install:
       rm -rf package-lock.json
       rm -rf node_modules
       make installGlobal
+      make cleanNpmCache
       make install
     ;;
   esac
