--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean:rimraf": "rimraf node_modules package-lock.json",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.js\" \"tests/**/*.js\"",
-    "test": "jest"
+    "test": "jest",
+    "jest:coverage": "jest --collectCoverage"
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
