--- a/.github/workflows/node-codecov.yml
+++ b/.github/workflows/node-codecov.yml
@@ -24,17 +24,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Print env info
-        run: |
-          node -v
-
-      -
-        name: Build if present
-        run: npm run build --if-present
-
       -
         name: Test coverage
-        run: npm run jest:coverage
+        run: |
+          node -v
+          npm install
+          npm run build --if-present
+          npm test
+          npm run jest:coverage
 
       - name: Codecov
         uses: codecov/codecov-action@v3.1.4
