docs: add package.json homepage and bugs

--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/bridgewwater/node-cli-temple.git"
+  },
+  "homepage": "https://github.com/bridgewwater/node-cli-temple#readme",
+  "bugs": {
+    "url": "https://github.com/bridgewwater/node-cli-temple/issues"
   }
 }
