--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "clean:rimraf": "rimraf node_modules package-lock.json",
+    "format": "prettier --write src/*.js src/**/*.js src/**/**/*.js tests/**/*.js tests/**/**/*.js",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.js\" \"tests/**/*.js\"",
     "test": "jest",
     "jest:coverage": "jest --collectCoverage"
@@ -31,6 +32,7 @@
     "eslint": "^7.18.0",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "regenerator-runtime": "^0.13.7",
     "semver": "^7.3.4"
   },
