--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -31,23 +31,14 @@ jobs:
           node-version: 'lts/*'
           registry-url: https://registry.npmjs.org/
       - run: npm install
-      - run: npm run build
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - uses: JS-DevTools/npm-publish@v2
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
   node-gh-release:
     needs: publish-npm
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 'lts/*'
-      - name: Build check
-        run: |
-          npm install
-          npm run build --if-present
-          npm test
       - uses: softprops/action-gh-release@master
         name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
@@ -59,4 +50,4 @@ jobs:
           # https://github.com/isaacs/node-glob
           # files: |
           #   **/*.tar.gz
-          #   **/*.sha256
+          #   **/*.sha2566
