--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "clean:rimraf": "rimraf node_modules package-lock.json",
     "format": "prettier --write src/*.js src/**/*.js src/**/**/*.js tests/**/*.js tests/**/**/*.js",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.js\" \"tests/**/*.js\"",
-    "test": "jest",
-    "jest:coverage": "jest --collectCoverage"
+    "test": "jest --ci",
+    "jest:coverage": "jest --ci --coverage",
+    "jest:collectCoverage": "jest --collectCoverage"
   },
   "dependencies": {
     "@babel/preset-env": "^7.12.11",
@@ -26,6 +27,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
     "babel-preset-env": "^1.7.0",
@@ -37,7 +39,7 @@
     "semver": "^7.3.4"
   },
   "engines": {
-    "node": ">=8.10.0"
+    "node": ">=10.24.0"
   },
   "description": "",
   "keywords": [
