--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,7 +17,7 @@ updates:
       interval: "monthly"
       day: "sunday"
     open-pull-requests-limit: 10
-#    ignore:
-#    - dependency-name: foo
+    ignore:
+    - dependency-name: chalk
 #      versions:
 #      - ">= 2.a, < 3"
