feat: finish update workflow

--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -47,6 +47,12 @@ jobs:
           npm install
           node -v
 
+      -
+        name: Run code check
+        run: |
+          npm run lint
+          npm test
+
       - name: Check Release archive
         if: ${{ inputs.upload_artifact_name != null }}
         run: |
