--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -42,6 +42,10 @@ jobs:
         run: |
           npm run build --if-present
       -
+        name: Run lint
+        run: |
+          npm run lint
+      -
         name: Test with node
         run: |
           npm test
