--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -34,8 +34,8 @@ jobs:
       -
         name: Install dependencies
         run: |
-          npm ci
-          # npm install
+          npm install
+          # npm ci
           node -v
       -
         name: Build if present
