build: let less node verison to 16.x and add node-codecov.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,15 @@ jobs:
     uses: ./.github/workflows/node-ci.yml
     secrets: inherit
 
+  node-codecov:
+    name: node-codecov
+    needs:
+      - version
+      - node-ci
+    uses: ./.github/workflows/node-codecov.yml
+    # if: startsWith(github.ref, 'refs/tags/')
+    secrets: inherit
+
   node-release:
     name: node-release
     needs:
