feat(node): update check pipline and update `commander` to version `10+`

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -53,3 +53,7 @@ jobs:
         name: Test coverage
         run: |
           npm run jest:coverage
+      -
+        name: Run cli helpe
+        run: |
+          npm run cli:help
