build(node): change from `yamljs` to `js-yaml` and add `replace-lockfile-registry`
clean `babel` and `babel.config.js`

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -54,6 +54,6 @@ jobs:
         run: |
           npm run jest:coverage
       -
-        name: Run cli helpe
+        name: Run project target cli help
         run: |
           npm run cli:help
