--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "cli:help": "node bin/node-cli-temple.js -h",
     "clean:rimraf": "npx rimraf node_modules package-lock.json",
+    "clean:lockfile": "npx replace-lockfile-registry --registry https://registry.npmjs.org/",
     "format": "npx prettier --write src/*.js src/**/*.js src/**/**/*.js tests/**/*.js tests/**/**/*.js",
     "lint": "npx eslint \"bin/**/*.js\" \"src/**/*.js\" \"tests/**/*.js\"",
     "test": "npx jest --ci",
@@ -30,30 +31,25 @@
     "jest:collectCoverage": "npx jest --collectCoverage --silent"
   },
   "dependencies": {
-    "chalk": "^4.1.0",
+    "chalk": "4.1.2",
     "commander": "^12.1.0",
     "inquirer": "^10.1.6",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
     "minimatch": "^10.0.1",
     "moment": "^2.30.1",
     "shelljs": "^0.8.5",
-    "string-format": "^2.0.0",
-    "yamljs": "^0.3.0"
+    "string-format": "^2.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/core": "^7.25.2",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^29.7.0",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "rimraf": "6.0.1",
     "regenerator-runtime": "^0.14.1",
+    "replace-lockfile-registry": "^0.0.2",
+    "rimraf": "6.0.1",
     "semver": "^7.6.3"
   },
   "engines": {
