build(eslint): lint `error  Expected linebreaks to be 'LF' but found 'CRLF'  linebreak-style`

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@stylistic/eslint-plugin": "^2.6.1",
     "eslint": "^9.8.0",
     "eslint-plugin-jest": "^28.6.0",
     "globals": "^15.9.0",
