--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### project setting
+
+*.log
+CHANGELOG.txt
+
 ### custom template
 
 /dist/
@@ -7,6 +12,9 @@
 logs
 *.log
 npm-debug.log*
+
+# publish
+.npmrc
 
 # Runtime data
 pids
@@ -51,58 +59,15 @@ jspm_packages
 # Yarn Integrity file
 .yarn-integrity
 
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+### IDE
 
-/captures
-/.idea
-*.iml
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
-
-## File-based project format:
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+xcuserdata/
+.idea/
+.vs/
+.vscode/
 
 ### Linux template
-*~
+# *~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
@@ -112,17 +77,16 @@ fabric.properties
 
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
-
 ### OSX template
 .DS_Store
 .AppleDouble
 .LSOverride
 
 # Icon must end with two \r
-Icon
+# Icon
 
 # Thumbnails
-._*
+# ._*
 
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
