--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "cli:help": "node bin/node-cli-temple.js -h",
     "clean:rimraf": "npx rimraf node_modules package-lock.json",
     "clean:lockfile": "npx replace-lockfile-registry --registry https://registry.npmjs.org/",
-    "format:check": "npx prettier --check \"{src,tests}/**/*.{js,vue,ts,tsx}\"",
-    "format": "npx prettier --write eslint.config.mjs \"{bin,src,tests}/**/*.{js,vue,ts,tsx}\"",
-    "lint:eslint": "npx eslint \"{bin,src,tests}/**/*.{js,vue,ts,tsx}\" --max-warnings 0",
+    "format:check": "npx prettier --check \"{src,tests}/**/*.{js,mjs,vue,ts,tsx}\"",
+    "format": "npx prettier --write eslint.config.mjs \"{bin,src,tests}/**/*.{js,mjs,vue,ts,tsx}\"",
+    "lint:eslint": "npx eslint \"{bin,src,tests}/**/*.{js,mjs,vue,ts,tsx}\" --max-warnings 0",
     "lint": "npm run lint:eslint",
-    "lint:eslintNoWarning": "npx eslint --cache --max-warnings 0 \"{bin,src,tests}/**/*.{js,vue,ts,tsx}\" --fix",
+    "lint:eslintNoWarning": "npx eslint --cache --max-warnings 0 \"{bin,src,tests}/**/*.{js,mjs,vue,ts,tsx}\" --fix",
     "jest:coverage": "npx jest --ci --coverage --silent",
     "jest:collectCoverage": "npx jest --collectCoverage --silent",
     "test": "npx jest --ci"
@@ -47,7 +47,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@stylistic/eslint-plugin": "^2.6.1",
     "eslint": "^9.8.0",
     "eslint-plugin-jest": "^28.6.0",
     "globals": "^15.9.0",
