ci(action): change node-release to npm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     secrets: inherit
     with:
+      dry-run: false
       tag_name: ${{ needs.version.outputs.tag_name }}
       tag_changes: ${{ needs.version.outputs.cc_changes }}
       npm_version: ${{ needs.version.outputs.cc_version }}
-      # dry-run: false
       # upload_artifact_name: node-release
 
   deploy-tag:
