--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ logs
 npm-debug.log*
 
 # publish
-.npmrc
+# .npmrc
 
 # Runtime data
 pids
@@ -64,7 +64,10 @@ jspm_packages
 xcuserdata/
 .idea/
 .vs/
-.vscode/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/launch.json
 
 ### Linux template
 # *~
