--- a/.gitignore
+++ b/.gitignore
@@ -64,10 +64,10 @@ jspm_packages
 xcuserdata/
 .idea/
 .vs/
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-!.vscode/launch.json
+/.vscode/*
+!/.vscode/extensions.json
+!/.vscode/settings.json
+!/.vscode/launch.json
 
 ### Linux template
 # *~
